[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Rat/rat_meat.png" type="Texture" id=1]
[ext_resource path="res://src/Collectable/RatMeat.gd" type="Script" id=2]
[ext_resource path="res://Assets/Rat/rat_meat_erika.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 3 )

[node name="RatMeat" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 2 )

[node name="RatMeat" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectPlayer" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 2 )

[node name="RatMeatErika" type="Sprite" parent="."]
texture = ExtResource( 3 )

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
